refact: sending message id for bot and progress message
